@@ -2704,12 +2704,12 @@ void Game_window::theft
 		theft_warnings = 0;
 		}
 	GOVector npcs;			// See if someone is nearby.
-	int cnt = main_actor->find_nearby(npcs, -359, 12, 8);
+	main_actor->find_nearby(npcs, -359, 12, 8);
 	Actor *closest_npc = 0;
 	int best_dist = 5000;
-	for (int i = 0; i < cnt; i++)
+	for (GOVector::const_iterator it = npcs.begin(); it != npcs.end();++it)
 		{
-		Actor *npc = (Actor *) npcs.at(i);
+		Actor *npc = (Actor *) *it;
 		if (npc->is_monster() || npc == main_actor ||
 		    npc->get_party_id() >= 0)
 			continue;
