@@ -1,3 +1,7 @@
+2000-11-17  Jeff Freedman  <jeff@amy.nerble.net>
+
+	* Use vector::iterators instead of going through indices.
+
 2000-11-16  Tristan Tarrant <nadir@users.sourceforge.net>
 
 	* files/databuf: Implemented an ExultDataSource which encapsulates
